umol-io/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@pubchem_Structure2D_COMPOUND_CID_160765.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C4H8O2S
      atom_count: 15
      bond_count: 14
      property_count: 33
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C4H8O2S
      atom_count: 15
      bond_count: 14
      property_count: 33
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C4H8O2S
      atom_count: 15
      bond_count: 14
      extended_atoms: 0
      extended_bonds: 0
      property_count: 33
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C4H8O2S
      atom_count: 15
      bond_count: 14
      extended_atoms: 0
      extended_bonds: 0
      property_count: 33
      rgroup_count: 0
      sgroup_count: 0
